Create profile.html and and add index link.

--- a/profile.html
+++ b/profile.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Profile</title>
 </head>
 <body>
-    <h3>Index Page</h3>
-    <p>
-        <a href="profile.html">Profile Page</a>
-    </p>
+    <h3>My name is Jirapat Sereerat./h3>
+    <p>My Student ID is 662115004.</p>
 </body>
 </html>
