Create CAMT info page and link

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <p>
         <a href="profile.html">Profile Page</a>
     </p>
+    <p>
+        <img width="200" src="https://smartoffice.camt.cmu.ac.th/v1r/img/camt_logo.png" alt="camt_logo">
+        <a href="camt.html">CAMT Page</a>
+    </p>
 </body>
 </html>
