--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <img width="200" src="https://smartoffice.camt.cmu.ac.th/v1r/img/camt_logo.png" alt="camt_logo">
         <a href="camt.html">CAMT Page</a>
     </p>
+
+    <p>To be continue</p>
 </body>
 </html>
