add friend profile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h3>Index Page</h3>
     <p>
         <a href="profile.html">Profile Page</a>
+        <a href="friendprofile.html">friendprofile</a>
     </p>
     <p>
         <img width="200" src="https://smartoffice.camt.cmu.ac.th/v1r/img/camt_logo.png" alt="camt_logo">
