--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <img width="200" src="https://smartoffice.camt.cmu.ac.th/v1r/img/camt_logo.png" alt="camt_logo">
         <a href="camt.html">CAMT Page</a>
     </p>
+    <div>
+        <img src="Spidey.jpg" alt="myfreindimg" width="200">
+    </div>
 
     <p>To be continue</p>
 </body>
