--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
     <h3>Index Page</h3>
     <p>
         <a href="profile.html">Profile Page</a>
-        <a href="friendprofile.html">friendprofile</a>
     </p>
+    <br>
     <p>
-        <img width="200" src="https://smartoffice.camt.cmu.ac.th/v1r/img/camt_logo.png" alt="camt_logo">
         <a href="camt.html">CAMT Page</a>
+        <div>
+            <img width="200" src="https://smartoffice.camt.cmu.ac.th/v1r/img/camt_logo.png" alt="camt_logo">
+        </div>
     </p>
-    <div>
-        <img src="Spidey.jpg" alt="myfreindimg" width="200">
-    </div>
-
-    <p>To be continue</p>
+    <br>
+    <p>
+        <a href="friendprofile.html">Friend profile</a>
+        <div>
+            <img src="Spidey.jpg" alt="myfreindimg" width="200">
+        </div>
+    </p>
 </body>
 </html>
